<resources>
    <string name="app_name">Task5</string>
    <string name="profile_person_name">Lucile Alvarado</string>
    <string name="profile_career">Graphic designer</string>
    <string name="profile_home_address">5295 Gaylord Walks Apk. 110</string>
    <string name="profile_contacts">VIEW MY CONTACTS</string>
    <string name="profile_edit">Edit profile</string>
    <string name="login_greetings">Let\'s get acquainted</string>
    <string name="login_greetings_2">Fill out the profile and go to the application!</string>
    <string name="login_profile_settings">Settings</string>
    <string name="login_fill_out_go_settings">Go to settings and fill out the profile</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_google">Google</string>
    <string name="login_or">or</string>
    <string name="login_register">register</string>
    <string name="login_by_clicking_register_you_agree_to_our_terms_n_and_conditions">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="login_don_t_have_account">Don’t have account?</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_error_password_few_symbols">Min 5 symbols!</string>
    <string name="login_error_password_number">At least 1 number</string>
    <string name="login_error_email_valid_email">Enter valid E-mail</string>
    <string name="addContact_hint_username"><font size="34">Username</font></string>
    <string name="addContact_hint_career">Career</string>
    <string name="addContact_hint_email">Email</string>
    <string name="addContact_hint_phone">Phone</string>
    <string name="addContact_hint_address">Address</string>
    <string name="addContact_hint_DareOfBirth">Date of birth</string>
    <string name="addContact_bSave_text">Save</string>
    <string name="contacts_toast_noInformation">At least give a name</string>
    <string name="contacts_tvAddContact">Add Contact</string>
    <string name="contacts_tvContacts">Contacts</string>
    <string name="contacts_sbRemoved">%1$s removed</string>
    <string name="recyclerView_itemName" translatable="false">Name</string>
    <string name="recyclerView_itemCareer" translatable="false">Career</string>
    <string name="showContact_name">Name: %1$s</string>
    <string name="showContact_career">Career: %1$s</string>
    <string name="showContact_email">Email: %1$s</string>
    <string name="showContact_phone">Phone: %1$s</string>
    <string name="showContact_address">Address: %1$s</string>
    <string name="showContact_birth">Birth: %1$s</string>
    <string name="login_error_cant_find_user">Can`t find user</string>
    <string name="addContact_allUsers">Users</string>
    <string name="TabLayout_firstTab">Profile</string>
    <string name="TabLayout_secondTab">Contacts</string>
    <string name="Token" translatable="false">Bearer\u0020</string>
    <string name="signUp_your_data">Your profile data</string>
    <string name="signUp_your_data_bot">Fill out the profile and go to the application!</string>
    <string name="signUp_hintName">Name</string>
    <string name="signUp_hintMobile">Mobile</string>
    <string name="signUp_bForward">Forward</string>
    <string name="signUp_bCancel">Cancel</string>
</resources>