<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background"
    android:orientation="vertical"
    android:padding="@dimen/indent_normal">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGreetingTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/authFragment_topMargin"
        android:fontFamily="@font/semi_bold"
        android:text="@string/login_greetings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_max" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGreetingBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/semi_bold"
        android:text="@string/login_greetings_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        android:theme="@style/ThemeOverlay.App.TextInputLayout"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/TextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_big"
            android:backgroundTint="@android:color/transparent"
            android:singleLine="true"
            android:textColor="@color/alabaster" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_big"
        android:hint="@string/login_password_hint"
        android:theme="@style/ThemeOverlay.App.TextInputLayout"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/TextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/alabaster" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:text="@string/login_remember_me"
        android:textColor="@color/alabaster"
        android:textSize="@dimen/textSize_normal" />

    <com.androidAssignment5.views.GoogleButton
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/authFragment_googleButton_height" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/indent_min"
        android:fontFamily="@font/semi_bold"
        android:text="@string/login_or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_big" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/authFragment_registerButton_height"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_register"
        android:fontFamily="@font/semi_bold"
        android:text="@string/login_register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/authFragment_terms_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/indent_normal"
        android:text="@string/login_by_clicking_register_you_agree_to_our_terms_n_and_conditions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_normal" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/indent_normal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_min"
            android:fontFamily="@font/semi_bold"
            android:text="@string/login_don_t_have_account"
            android:textColor="@color/alabaster"
            android:textSize="@dimen/textSize_normal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_small"
            android:layout_marginTop="@dimen/indent_min"
            android:fontFamily="@font/semi_bold"
            android:text="@string/login_sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_normal" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>