<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/profile_background"
        android:orientation="vertical"
        android:padding="@dimen/indent_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/semi_bold"
            android:text="@string/login_profile_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPhotoProfile"
            android:layout_width="@dimen/profileFragment_ivPhotoProfile_width"
            android:layout_height="@dimen/profileFragment_ivPhotoProfile_height"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="@dimen/indent_normal"
            app:srcCompat="@drawable/icon_default_photo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="@dimen/indent_big"
            android:fontFamily="@font/semi_bold"
            android:gravity="top|start"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_big"
            app:layout_constraintEnd_toEndOf="@id/profile"
            app:layout_constraintStart_toStartOf="@id/profile"
            app:layout_constraintTop_toBottomOf="@id/ivPhotoProfile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCareer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="@dimen/indent_min"
            android:fontFamily="@font/semi_bold"
            android:gravity="top"
            android:textColor="@color/profile_career_address"
            android:textSize="@dimen/textSize_normal"
            app:layout_constraintEnd_toEndOf="@id/profile"
            app:layout_constraintStart_toStartOf="@id/profile"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="@dimen/indent_normal"
            android:fontFamily="@font/semi_bold"
            android:textColor="@color/profile_career_address"
            android:textSize="@dimen/textSize_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCareer" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/profileFragment_buttons_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContacts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profileFragment_btnContacts_height"
            android:layout_marginBottom="@dimen/indent_normal"
            android:backgroundTint="@color/contacts_contacts"
            android:fontFamily="@font/semi_bold"
            android:letterSpacing="0.1"
            android:text="@string/profile_contacts"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profileFragment_btnEditProfile_height"
            android:layout_marginHorizontal="@dimen/profileFragment_bEditProfile_marginHorizontal"
            android:layout_marginBottom="@dimen/indent_normal"
            android:background="@drawable/button_edit"
            android:fontFamily="@font/semi_bold"
            android:text="@string/profile_edit"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btnContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGo_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/profileFragment_tvGoSetting_marginBottom"
            android:fontFamily="@font/semi_bold"
            android:text="@string/login_fill_out_go_settings"
            android:textAlignment="center"
            android:textColor="@color/go_to_settings"
            android:textSize="@dimen/textSize_normal"
            app:layout_constraintBottom_toTopOf="@id/btnEditProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ivFacebook,ivLinkedin,ivInstagram"
            app:flow_horizontalGap="@dimen/indent_big"
            app:layout_constraintBottom_toTopOf="@id/tvGo_Settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.helper.widget.Flow>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFacebook"
            android:layout_width="@dimen/profileFragment_socialMedias_size"
            android:layout_height="@dimen/profileFragment_socialMedias_size"
            app:srcCompat="@drawable/icon_facebook" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLinkedin"
            android:layout_width="@dimen/profileFragment_socialMedias_size"
            android:layout_height="@dimen/profileFragment_socialMedias_size"
            app:srcCompat="@drawable/icon_linkedin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInstagram"
            android:layout_width="@dimen/profileFragment_socialMedias_size"
            android:layout_height="@dimen/profileFragment_socialMedias_size"
            app:srcCompat="@drawable/icon_instagram" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>